Make shift-reload bypass caches and service workers

Reload type has two variants: RELOAD and RELOAD_BYPASSING_CACHE. PlzNavigate
currently sets net::LOAD_NORMAL to load_flags and false to skip_service_worker
as BeginNavigationParams, so RELOAD_BYPASSING_CACHE doesn't affect those. This
CL tries to change those parameters according to the reload type.

Bug: 906542
Change-Id: Ib2f9f645007966d86a694d54dccbb476ec0fb45d
Reviewed-on: https://chromium-review.googlesource.com/c/1343875
Reviewed-by: Camille Lamy <clamy@chromium.org>
Commit-Queue: Makoto Shimazu <shimazu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609692}
Former-commit-id: 0b8807b1b9381d381923a551d7bd401775e04a48